fixed style issue on safari

--- a/src/components/Field/Field.css
+++ b/src/components/Field/Field.css
@@ -11,7 +11,6 @@
 
 .field {
   display: flex;
-  gap: 14px;
   margin: 21px 10px 21px;
   background: var(--color-field_background);
   border: none;
@@ -151,7 +150,6 @@
   cursor: pointer;
   display: inline-flex;
   align-items: center;
-  gap: 8px;
   margin: 0 25px -2px 0;
 }
 .field__radiobox-input {
@@ -168,7 +166,7 @@
   height: 12px;
   border: 1px solid var(--color-field_radio);
   border-radius: 50%;
-  margin-bottom: 1px;
+  margin: 0 8px 1px 0;
 }
 .field__radiobox-mark:before {
   content: '';
@@ -195,7 +193,6 @@
 }
 .field__checkbox-label {
   display: inline-flex;
-  gap: 8px;
   cursor: pointer;
   align-items: center;
 }
@@ -209,7 +206,7 @@
   height: 12px;
   border: 1px solid var(--color-field_radio);
   border-radius: 3px;
-  margin-top: -1px;
+  margin: -1px 8px 0 0;
 }
 .field__checkbox-mark-icon {
   margin: 0 0 4px;
