--- a/src/forms/RegistrationForm/RegistrationForm.css
+++ b/src/forms/RegistrationForm/RegistrationForm.css
@@ -14,10 +14,10 @@
 }
 
 .registration-form__icon_password {
-  margin: 0 3px 5px 1px;
+  margin: 0 17px 5px 1px;
 }
 .registration-form__icon_email {
-  margin-top: 1px;
+  margin: 1px 14px 0 0;
 }
 
 .registration-form__title {
